syntax = "proto3";

package payments;

option go_package = "github.com/fmo/grpc/protos/golang/payments";

service PaymentService {
  rpc MakePayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string user_id = 1;
  double amount = 2;
  string currency = 3;
  string payment_method = 4;
}

message PaymentResponse {
  bool success = 1;
  string transaction_id = 2;
  string message = 3;
}
